--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 /*--------------------------------------------------------------------- import Files ---------------------------------------------------------------------*/
 
-@import url(css/animate.min.css);
+@import url(/css/animate.min.css);
 @import url(css/normalize.css);
 @import url(css/icomoon.css);
 @import url(css/font-awesome.min.css);
