--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 @import url(/sunglass/css/font-awesome.min.css);
 @import url(/sunglass/css/meanmenu.css);
 @import url(/sunglass/css/owl.carousel.min.css);
-@import url(/sunglass/css/swiper.min.css);
+/* @import url(/sunglass/css/swiper.min.css); */
 @import url(/sunglass/css/slick.css);
 @import url(/sunglass/css/jquery.fancybox.min.css);
 @import url(/sunglass/css/jquery-ui.css);
